# schule-ein-interface-geben

./: .gitignore  README.md  books.bib  exploration.ipynb  pipeline.py  pyproject.toml  smoke_test_downloads_tree.json  smoke_test_legal_resources.parquet
lib/: pyproject.toml
lib/src/lib/: __init__.py  config.py  custom_scraping_sources.py  dlt_defs.py  law_helpers.py  legal_res_helpers.py  llm_parsers.py  models.py  post_parsing.py  pulication_helpers.py  rendered_scraping.py  scraping.py  transform.py  tree_functions.py
models/: books.py
static_data/: Untitled-1.ipynb  laws.json  legal_resources.json  saarland_scc.json
tests/: test_dedicated_dl_chapter_scraping.py  test_get_book_chapter.py  test_get_transcript_url.py  test_law_helpers.py  test_parse_glossary.py  test_post_main_scraping.py  test_publication_helpers.py  test_related_post_scraping.py  test_s3_upload.py  test_scc_scraping.py  test_svtipps_scraping.py  test_typing.py
