[project]
name = "schule-ein-interface-geben"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dlt[duckdb]>=1.13.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "lib",
    "dspy>=2.6.27",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
lib = { workspace = true }

[tool.uv.workspace]
members = ["lib"]
